<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:SeekBar="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/black">

        <RelativeLayout
            android:id="@+id/toolbar_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="20dp"
                android:background="@drawable/ic_circle"
                android:contentDescription="@string/close_button"
                android:padding="8dp"
                android:src="@drawable/ic_close" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="20dp"
                android:background="@drawable/ic_circle"
                android:contentDescription="@string/faq_button"
                android:padding="8dp"
                android:src="@drawable/ic_question" />


        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:background="@drawable/background_top_rounded">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <technology.nine.cred.utills.customfonts.TextView.KumbhSansBoldTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:letterSpacing="0.03"
                android:lineSpacingExtra="5sp"
                android:text="@string/nikunj_how_much_do_you_need"
                android:textColor="@color/blue_4"
                android:textSize="15sp" />

            <technology.nine.cred.utills.customfonts.TextView.KumbhSansRegularTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:letterSpacing="0.03"
                android:lineSpacingExtra="5sp"
                android:paddingTop="10dp"
                android:text="@string/move_the_dial_and_set_any_amount_you_need_upto_u20b9_487_891"
                android:textColor="#616161" />


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:background="@color/white"
                app:cardCornerRadius="30dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="20dp">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:orientation="vertical"
                            android:paddingStart="50dp"
                            android:paddingTop="20dp"
                            android:paddingEnd="50dp">

                            <technology.nine.cred.utills.customfonts.TextView.KumbhSansRegularTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:letterSpacing="0.03"
                                android:lineSpacingExtra="5sp"
                                android:text="@string/credit_amount"
                                android:textColor="@android:color/darker_gray"
                                android:textSize="13sp" />

                            <technology.nine.cred.utills.customfonts.TextView.KumbhSansBoldTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:background="@drawable/dotted_line"
                                android:letterSpacing="0.03"
                                android:lineSpacingExtra="5sp"
                                android:text="\u20b9 1,50,000"
                                android:textColor="@color/black"
                                android:textSize="24sp" />

                            <technology.nine.cred.utills.customfonts.TextView.KumbhSansBoldTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:letterSpacing="0.03"
                                android:lineSpacingExtra="5sp"
                                android:paddingTop="10dp"
                                android:text="@string/_1_04_monthly"
                                android:textColor="#dcedc8"
                                android:textSize="13sp"
                                android:textStyle="bold" />


                        </LinearLayout>

                        <technology.nine.cred.utills.SeekBar
                            android:layout_width="match_parent"
                            android:layout_height="300dp"
                            android:layout_gravity="start"
                            android:padding="50dp"

                            SeekBar:arcColor="@color/pink_200"
                            SeekBar:arcWidth="15dp"
                            SeekBar:indicatorIcon="@drawable/indicator"
                            SeekBar:max="1000"
                            SeekBar:min="100"
                            SeekBar:progressColor="@color/pink_500"
                            SeekBar:progressWidth="15dp"
                            SeekBar:step="100" />


                    </RelativeLayout>

                    <technology.nine.cred.utills.customfonts.TextView.KumbhSansRegularTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:letterSpacing="0.03"
                        android:lineSpacingExtra="5sp"
                        android:padding="20dp"
                        android:text="@string/stash_in_instant_money_will_be_credited_within_seconds" />

                </LinearLayout>


            </androidx.cardview.widget.CardView>
        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/background_blue_top_rounded">

        <technology.nine.cred.utills.customfonts.TextView.KumbhSansBoldTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/proceed_to_emi_selection"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </LinearLayout>


</RelativeLayout>